message PrimitiveCListValueArrayMessage {
  repeated bytes values = 1;
}

message PrimitiveCListInsertMessage {
  required bytes locMessage = 1;
  oneof type {
    bytes value = 2;
    bytes values = 3;
    PrimitiveCListValueArrayMessage valuesArray = 4;
  }
}

message PrimitiveCListDeleteMessage {
  required bytes startLoc = 1;
  optional bytes endLoc = 2;
}

message PrimitiveCListMessage {
  oneof op {
    PrimitiveCListInsertMessage insert = 1;
    PrimitiveCListDeleteMessage delete = 2;
  }
}

message PrimitiveCListSave {
  required bytes locs = 1;
  oneof valueType {
    bytes values = 2;
    PrimitiveCListValueArrayMessage valuesArray = 3;
  }
}
